/: Add links to GitLab and GitHub

--- a/index.html.jinja
+++ b/index.html.jinja
@@ -17,6 +17,9 @@
     <li> <a href="ballistae"><code>ballistae</code></a>
     <li> <a href="webgl-raytracer"><code>webgl-raytracer</code></a>
   </ul>
+  Take a look at
+  my <a href="https://git.row-major.net/explore/projects">GitLab</a>
+  and <a href="https://https://github.com/ahmedtd">GitHub</a>.
 </section>
 
 <section>
