rl-force-tube: get it going

--- a/base.html.jinja
+++ b/base.html.jinja
@@ -15,7 +15,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} - Row Major (Taahir Ahmed)</title>
+    <title>{% block title %}{% endblock %} - Row-Major (Taahir Ahmed)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% block styles %}
@@ -99,7 +99,7 @@
     <header id="page-header">{#- -#}
       <img src="{{ file_to_datauri('row-major-logo-optimized.svg', 'image/svg+xml') }}"
            id="page-header-logo">{#- -#}
-      <h1 id="page-header-title">Row Major: Taahir Ahmed</h1>{#- -#}
+      <h1 id="page-header-title">Row-Major</h1>{#- -#}
     </header>
 
     <hr>
