resume: Add Amazon experience

--- a/resume/index.html.jinja
+++ b/resume/index.html.jinja
@@ -17,10 +17,10 @@
   <h1>Skills</h1>
 
   <h2>Software Development</h2>
-  <p>I have worked on network backends, embedded systems, and a little
+  <p>I have worked on network backends, embedded systems, web frontends, and a little
     bit of everything else.
   <p>My go-to languages are Scheme, C, C++('14), Python 3, and
-  JavaScript.
+    JavaScript / ReactJS.
   <p>I am always willing to learn new systems and languages.
 
   <h2>Electronic Design</h2>
@@ -37,7 +37,20 @@
 <section>
   <h1>Work Experience</h1>
 
-  <h2>Senior Developer, Frogslayer LLC(2015&ndash;present)</h2>
+  <h2>Software Development Engineer, Amazon (2017-present)</h2>
+  <ul>
+    <li>I work on the infrastructure that backs the reverse logistics
+      pipeline for Amazon's devices. In addition to general
+      contributions to the software my team supports, I lead design
+      and development on Amazon's internal device physical defect rate
+      reporting tool.
+    <li>I'm an Amazon Security Certifier &mdash; I lead teams that are
+      developing high-risk applications through Amazon's security
+      review process, reviewing the general application architecture
+      as well as reviewing code for vulnerabilities.
+  </ul>
+
+  <h2>Senior Developer, Frogslayer LLC(2015&ndash;2017)</h2>
   <ul>
     <li>I was a junior developer from 2015 to 2016, and a senior
       developer from 2016 onwards.
@@ -54,7 +67,7 @@
   <ul>
     <li>I built the initial in-playback audio language switching support
       for the Amazon Instant Video Kindle app.
-    <li>I contributed QoS reporting improvements and build system
+    <li>I contributed Quality of Service reporting improvements and build system
       improvements.
   </ul>
 
@@ -69,6 +82,12 @@
 
 <section>
   <h1>Activities</h1>
+
+  <h2>Free Software Contributions</h2>
+  <ul>
+    <li>I maintain the <code>nomacs</code> package for the <code>NixOS</code> Linux distribution.
+    <li>I have made small contributions to Firefox's JIT compiler.
+  </ul>
 
   <h2>Texas A&amp;M CCDC Team</h2>
   <ul>
