Update git references to point to gitlab.com

--- a/frustum/index.html.jinja
+++ b/frustum/index.html.jinja
@@ -17,7 +17,7 @@
 <section>
   <h1>Code</h1>
   <p><code>frustum</code> is available via git:
-    <pre><code>https://git.row-major.net/ahmedtd/frustum.git</code></pre>
+    <pre><code>https://gitlab.com/ahmedtd/frustum.git</code></pre>
 </section>
 
 {% endblock %}
