--- a/index.html.jinja
+++ b/index.html.jinja
@@ -18,7 +18,7 @@
     <li> <a href="webgl-raytracer"><code>webgl-raytracer</code></a>
   </ul>
   Take a look at
-  my <a href="https://git.row-major.net/explore/projects">GitLab</a>
+  my <a href="https://gitlab.com/ahmedtd">GitLab</a>
   and <a href="https://https://github.com/ahmedtd">GitHub</a>.
 </section>
 
