--- a/resume/index.html.jinja
+++ b/resume/index.html.jinja
@@ -8,27 +8,36 @@
 
 {% block content %}
 <section>
+  <h1>Taahir Ahmed</h1>
+  <ul>
+    <li>ahmed.taahir@gmail.com
+    <li>Home Page: <a href="https://www.row-major.net">https://www.row-major.net</a>
+    <li>Projects: <a href="https://gitlab.com/ahmedtd">https://gitlab.com/ahmedtd</a>
+    <li>GitHub: <a href="https://github.com/ahmedtd">https://github.com/ahmedtd</a>
+  </ul>
+</section>
+
+<section>
   <h1>Education</h1>
-  <p>MS Computer Engineering, Texas A&amp;M (2017)
-  <p>BS Computer Engineering, Texas A&amp;M (2013)
+  <ul>
+    <li>MS Computer Engineering, Texas A&amp;M (2017)
+    <li>BS Computer Engineering, Texas A&amp;M (2013)
+  </ul>
 </section>
 
 <section>
   <h1>Skills</h1>
 
   <h2>Software Development</h2>
-  <p>I have worked on network backends, embedded systems, web frontends, and a little
-    bit of everything else.
-  <p>My go-to languages are Scheme, C, C++('14), Python 3, and
-    JavaScript / ReactJS.
-  <p>I am always willing to learn new systems and languages.
-
-  <h2>Electronic Design</h2>
-  <p>I have experience designing and fabricating circuit boards with PIC
-    and AVR microcontrollers.
-
-  <h2>Linux</h2>
-  <p>System administration, scripting, and systems programming.
+  <ul>
+    <li>I have worked on service backends, embedded systems, web frontends, and a little
+      bit of everything else.
+    <li>My go-to languages are Scheme, C, C++('14), Java, Python 3, and
+      JavaScript / ReactJS.
+    <li>I have extensive experience in Linux system administration,
+      scripting, and systems programming.
+    <li>I am always willing to learn new systems and languages.
+  </ul>
 
   <h2>Technical Writing</h2>
   <p> I am an excellent technical writer (this website notwithstanding).
@@ -37,10 +46,10 @@
 <section>
   <h1>Work Experience</h1>
 
-  <h2>Software Development Engineer, Amazon (2017-present)</h2>
+  <h2>Software Development Engineer II, Amazon (2017-present)</h2>
   <ul>
-    <li>I work on the infrastructure that backs the reverse logistics
-      pipeline for Amazon's devices. In addition to general
+    <li>I work on the software infrastructure that backs the reverse
+      logistics pipeline for Amazon's devices. In addition to general
       contributions to the software my team supports, I lead design
       and development on Amazon's internal device physical defect rate
       reporting tool.
@@ -70,14 +79,6 @@
     <li>I contributed Quality of Service reporting improvements and build system
       improvements.
   </ul>
-
-  <h2>Developer, RapidLogger Systems LLC (2012&ndash;2014)</h2>
-  <ul>
-    <li>I built a forwarding proxy server for oilfield data streams, as
-      well as an Android application for displaying the streams.
-    <li>I built minimal-state-change control software for the mix ratio
-      of oilfield mixing tanks.
-  </ul>
 </section>
 
 <section>
@@ -87,14 +88,6 @@
   <ul>
     <li>I maintain the <code>nomacs</code> package for the <code>NixOS</code> Linux distribution.
     <li>I have made small contributions to Firefox's JIT compiler.
-  </ul>
-
-  <h2>Texas A&amp;M CCDC Team</h2>
-  <ul>
-    <li>I was part of an 8-person team that represented Texas A&amp;M at
-      the regional and national Collegiate Cyber Defense Competition.
-    <li>We operated a simulated business while defending against
-      constant and professional network intrusions.
   </ul>
 </section>
 
