--- a/ballistae/index.html.jinja
+++ b/ballistae/index.html.jinja
@@ -51,6 +51,6 @@
 <section>
   <h1>Code</h1>
   <p><code>ballistae</code> is available via git:
-    <pre><code>https://git.row-major.net/ahmedtd/ballistae.git</code></pre>
+    <pre><code>https://gitlab.com/ahmedtd/ballistae.git</code></pre>
 </section>
 {% endblock %}
