Expose rl-force-tube from main page

--- a/index.html.jinja
+++ b/index.html.jinja
@@ -23,6 +23,13 @@
 </section>
 
 <section>
+  <h1>Articles</h1>
+  <ul>
+    <li> <a href="articles/rl-force-tube">Reinforcement Learning Demo (Work in Progress)</a>
+  </ul>
+</section>
+
+<section>
   <h1>Articles worth reading</h1>
   <ul>
     <li> <a href="{{ ur_fascism_url }}">Ur-Fascism</a> (Umberto Eco)</li>
