Fix malformed URL

--- a/index.html.jinja
+++ b/index.html.jinja
@@ -19,7 +19,7 @@
   </ul>
   Take a look at
   my <a href="https://gitlab.com/ahmedtd">GitLab</a>
-  and <a href="https://https://github.com/ahmedtd">GitHub</a>.
+  and <a href="https://github.com/ahmedtd">GitHub</a>.
 </section>
 
 <section>
