Add Google to resume

--- a/resume/index.html.jinja
+++ b/resume/index.html.jinja
@@ -12,7 +12,7 @@
   <ul>
     <li>ahmed.taahir@gmail.com
     <li>Home Page: <a href="https://www.row-major.net">https://www.row-major.net</a>
-    <li>Projects: <a href="https://gitlab.com/ahmedtd">https://gitlab.com/ahmedtd</a>
+    <li>GitLab: <a href="https://gitlab.com/ahmedtd">https://gitlab.com/ahmedtd</a>
     <li>GitHub: <a href="https://github.com/ahmedtd">https://github.com/ahmedtd</a>
   </ul>
 </section>
@@ -46,14 +46,19 @@
 <section>
   <h1>Work Experience</h1>
 
-  <h2>Software Development Engineer II, Amazon (2017-present)</h2>
+  <h2>Software Engineer, Google (2019-Present)</h2>
   <ul>
-    <li>I work on the software infrastructure that backs the reverse
+    <li>I work on Google Kubernetes Engine.
+  </ul>
+
+  <h2>Software Development Engineer, Amazon (2017-2019)</h2>
+  <ul>
+    <li>I worked on the software infrastructure that backs the reverse
       logistics pipeline for Amazon's devices. In addition to general
-      contributions to the software my team supports, I lead design
-      and development on Amazon's internal device physical defect rate
+      contributions to the software my team supported, I led design
+      and development on an internal device physical defect rate
       reporting tool.
-    <li>I'm an Amazon Security Certifier &mdash; I lead teams that are
+    <li>I was an Amazon Security Certifier &mdash; I led teams that are
       developing high-risk applications through Amazon's security
       review process, reviewing the general application architecture
       as well as reviewing code for vulnerabilities.
