--- a/resume/index.html.jinja
+++ b/resume/index.html.jinja
@@ -30,12 +30,14 @@
 
   <h2>Software Development</h2>
   <ul>
-    <li>I have worked on service backends, embedded systems, web frontends, and a little
-      bit of everything else.
-    <li>My go-to languages are Scheme, C, C++('14), Java, Python 3, and
-      JavaScript / ReactJS.
+    <li>I have worked on service backends, embedded systems, web
+      frontends, and a little bit of everything else.
+    <li>My go-to languages are Scheme, Python, JavaScript / ReactJS, and
+      Golang.
     <li>I have extensive experience in Linux system administration,
       scripting, and systems programming.
+    <li>I also have experience with developing applications for and running
+      Kubernetes clusters.
     <li>I am always willing to learn new systems and languages.
   </ul>
 
@@ -48,7 +50,12 @@
 
   <h2>Software Engineer, Google (2019-Present)</h2>
   <ul>
-    <li>I work on Google Kubernetes Engine.
+    <li>I  work on  the Google  Kubernetes Engine  Security Team,  which
+      builds hardening and identity features.
+    <li>Some projects I've worked on:
+      <ul>
+        <li> <a href="https://cloud.google.com/blog/products/containers-kubernetes/introducing-workload-identity-better-authentication-for-your-gke-applications">GKE Workload Identity</a>
+      </ul>
   </ul>
 
   <h2>Software Development Engineer, Amazon (2017-2019)</h2>
@@ -59,7 +66,7 @@
       and development on an internal device physical defect rate
       reporting tool.
     <li>I was an Amazon Security Certifier &mdash; I led teams that are
-      developing high-risk applications through Amazon's security
+      developing applications through Amazon's security
       review process, reviewing the general application architecture
       as well as reviewing code for vulnerabilities.
   </ul>
