Edits to article

--- a/articles/2019-07-21-program-trace-analysis-with-wireshark/index.html.jinja
+++ b/articles/2019-07-21-program-trace-analysis-with-wireshark/index.html.jinja
@@ -100,9 +100,14 @@
   resulting pcap file:</p>
 
   <script src="https://gitlab.com/snippets/1877911.js"></script>
+
+  <p>Now, Wireshark will show you the parsed data in each packet.
+  Additionally, things like display filters now work &mdash; try
+  entering "example_proto.request_tag == 5" in the display filter
+  box.</p>
   
   <figure>
-    <img src="wireshark-custom-dissector.png">
+    <img src="wireshark-custom-dissector-example.png">
     <figcaption>The example custom dissector working.</figcaption>
   </figure>
   
