--- a/base.html.jinja
+++ b/base.html.jinja
@@ -4,7 +4,7 @@
       <a href="/">/root</a>{#- -#}
       {% for path in varargs %}{#- -#}
         <li class="breadcrumbs-item">{#- -#}
-          <a href="{{path}}">{{path}}</a>{#- -#}
+          {{path}}{#- -#}
         </li>{#- -#}
       {% endfor %}{#- -#}
     </li>{#- -#}
