--- a/index.html.jinja
+++ b/index.html.jinja
@@ -26,6 +26,7 @@
   <h1>Articles</h1>
   <ul>
     <li> <a href="articles/rl-force-tube">Reinforcement Learning Demo (Work in Progress)</a>
+    <li> <a href="articles/2019-07-21-program-trace-analysis-with-wireshark">(2019-07-21) Program Trace Analysis With Wireshark</a>
   </ul>
 </section>
 
