--- a/index.html.jinja
+++ b/index.html.jinja
@@ -27,6 +27,7 @@
   <ul>
     <li> <a href="articles/rl-force-tube">Reinforcement Learning Demo (Work in Progress)</a>
     <li> <a href="articles/2019-07-21-program-trace-analysis-with-wireshark">(2019-07-21) Program Trace Analysis With Wireshark</a>
+    <li> <a href="articles/2020-02-22-word-squares">(2020-02-22) Word Squares</a>
   </ul>
 </section>
 
