--- a/webalator/content/frustum/index.html.tmpl
+++ b/webalator/content/frustum/index.html.tmpl
@@ -1,13 +1,8 @@
-{% extends "base.html.jinja" %}
-
-{% block title %}frustum{% endblock %}
-
-{% block topnav %}
-{{  breadcrumbs('/frustum') }}
-{% endblock %}
-
-{% block content %}
-
+{{define "title"}}Frustum{{end}}
+{{define "breadcrumbs" -}}
+<ul class="breadcrumbs"><li class="breadcrumbs-item"><a href="/">/root</a></li><li class="breadcrumbs-item">/frustum</li></ul>
+{{- end}}
+{{define "content"}}
 <section>
   <h1>What is <code>frustum</code>?</h1>
   <p>Frustum is a C++ math/linear algebra library.  Development is
@@ -19,5 +14,4 @@
   <p><code>frustum</code> is available via git:
     <pre><code>https://gitlab.com/ahmedtd/frustum.git</code></pre>
 </section>
-
-{% endblock %}
+{{end}}
