Add interactive word squares

--- a/webalator/content/base.html.tmpl
+++ b/webalator/content/base.html.tmpl
@@ -72,6 +72,8 @@
        main figure * {
            max-width: 100%;
        }
+
+       {{block "styles" .}}{{end}}
       </style>
   </head>
   <body>
