--- a/webalator/content/index.html.tmpl
+++ b/webalator/content/index.html.tmpl
@@ -21,6 +21,7 @@
     <li> <a href="articles/rl-force-tube">Reinforcement Learning Demo (Work in Progress)</a>
     <li> <a href="articles/2019-07-21-program-trace-analysis-with-wireshark">(2019-07-21) Program Trace Analysis With Wireshark</a>
     <li> <a href="articles/2020-02-22-word-squares">(2020-02-22) Word Squares</a>
+    <li> <a href="articles/2020-05-12-interactive-word-squares">(2020-05-12) Interactive Word Squares</a>
   </ul>
 </section>
 
