Add jitter to particles

--- a/webalator/content/articles/2020-09-19-fluid/index.html.tmpl
+++ b/webalator/content/articles/2020-09-19-fluid/index.html.tmpl
@@ -33,6 +33,10 @@
   </p>
 
   <p>
+    The tracer particles have a bit of jitter, to help keep them from clumping up.
+  </p>
+
+  <p>
     I worked
     from <a href="http://www.cs.columbia.edu/~batty/teaching/COMS6998/GridFluids_overview.pdf">Christopher
     Batty's slides</a>
