--- a/webalator/content/base.html.tmpl
+++ b/webalator/content/base.html.tmpl
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>{{block "title" .}}Title{{end}} - Row-Major (Taahir Ahmed)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Analytics -->
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-179009104-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <!-- End Google Analytics -->
+
     {{block "head" .}}{{end}}
     <style>
       #page-header {
