Webalator: Add link to Google Cloud Blog Article

--- a/webalator/content/index.html.tmpl
+++ b/webalator/content/index.html.tmpl
@@ -23,6 +23,7 @@
     <li> <a href="articles/2020-02-22-word-squares">(2020-02-22) Word Squares</a>
     <li> <a href="articles/2020-05-12-interactive-word-squares">(2020-05-12) Interactive Word Squares</a>
     <li> <a href="articles/2020-09-19-fluid">(2020-09-19) Fluid Simulation</a>
+    <li> <a href="https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-bound-service-account-tokens">(2022-07-01) Google Cloud Blog: What GKE users need to know about Kubernetes' new service account tokens
   </ul>
 </section>
 
